--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
     "swr": "^2.2.4"
